--- a/source/catalog.html
+++ b/source/catalog.html
@@ -201,9 +201,7 @@
           <ul class="catalog-additional-goods__goods-list additional-goods">
 
             <li class="additional-goods__item additional-goods-product">
-              <a class="additional-goods-product__link-title" href="#">
-                <h3 class="additional-goods-product__title">Сахарозаменитель</h3>
-              </a>
+              <h3 class="additional-goods-product__title"><a class="additional-goods-product__link-title" href="#">Сахарозаменитель</a></h3>
               <div class="additional-goods-product__text-wrapper">
                 <p class="additional-goods-product__text">1 упаковка (100 г)</p>
                 <p class="additional-goods-product__price">200 Р.</p>
@@ -212,9 +210,7 @@
             </li>
 
             <li class="additional-goods__item additional-goods-product">
-              <a class="additional-goods-product__link-title" href="#">
-                <h3 class="additional-goods-product__title">Питьевая вода</h3>
-              </a>
+              <h3 class="additional-goods-product__title"><a class="additional-goods-product__link-title" href="#">Питьевая вода</a></h3>
               <div class="additional-goods-product__text-wrapper">
                 <p class="additional-goods-product__text">5 литров</p>
                 <p class="additional-goods-product__price">50 Р.</p>
@@ -223,9 +219,7 @@
             </li>
 
             <li class="additional-goods__item additional-goods-product">
-              <a class="additional-goods-product__link-title" href="#">
-                <h3 class="additional-goods-product__title">Молоко</h3>
-              </a>
+              <h3 class="additional-goods-product__title"><a class="additional-goods-product__link-title" href="#">Молоко</a></h3>
               <div class="additional-goods-product__text-wrapper">
                 <p class="additional-goods-product__text">1 упаковка (30 г)</p>
                 <p class="additional-goods-product__price">300 Р.</p>
@@ -234,9 +228,7 @@
             </li>
 
             <li class="additional-goods__item additional-goods-product">
-              <a class="additional-goods-product__link-title" href="#">
-                <h3 class="additional-goods-product__title">Витамины</h3>
-              </a>
+              <h3 class="additional-goods-product__title"><a class="additional-goods-product__link-title" href="#">Витамины</a></h3>
               <div class="additional-goods-product__text-wrapper">
                 <p class="additional-goods-product__text">1 упаковка (30 г)</p>
                 <p class="additional-goods-product__price">300 Р.</p>
