--- a/source/index.html
+++ b/source/index.html
@@ -66,21 +66,23 @@
       </div>
 
       <section class="page-main__advantages advantages">
-        <h2 class="advantages__title title">Как это работает</h2>
-        <ul class="advantages__list">
-          <li class="advantages__item advantages__item--one">
-            Функциональное питание содержит только полезные питательные вещества.
-          </li>
-          <li class="advantages__item advantages__item--two">
-            Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
-          </li>
-          <li class="advantages__item advantages__item--three">
-            Замените один-два приема обычной еды на наше функциональное питание.
-          </li>
-          <li class="advantages__item advantages__item--four">
-            Уже через месяц наслаждайтесь изменениями к лучшему <span class="advantages__item-text">вашего питомца!<span>
-          </li>
-        </ul>
+        <div class="advantages__wrapper">
+          <h2 class="advantages__title title">Как это работает</h2>
+          <ul class="advantages__list">
+            <li class="advantages__item advantages__item--one">
+              Функциональное питание содержит только полезные питательные вещества.
+            </li>
+            <li class="advantages__item advantages__item--two">
+              Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+            </li>
+            <li class="advantages__item advantages__item--three">
+              Замените один-два приема обычной еды на наше функциональное питание.
+            </li>
+            <li class="advantages__item advantages__item--four">
+              Уже через месяц наслаждайтесь изменениями к лучшему <span class="advantages__item-text">вашего питомца!<span>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="page-main__example example">
@@ -107,7 +109,7 @@
 
           <section class="example__photo">
             <div class="example__image">
-              <img class="example__image-it-was" src="../img/cat-fat.png" width="677" height="520" alt="до нашего питания">
+              <img class="example__image-it-was" src="img/cat-fat.png" width="677" height="520" alt="до нашего питания">
               <img class="example__image-after example__image--invisible" src="img/cat-skinny.png" width="354" height="607" alt="после нашего питания">
             </div>
 
@@ -143,7 +145,7 @@
         <div class="page-footer__container">
           <div class="page__footer-wrapper container--flex">
             <a class="page-footer__logo">
-              <img class="page-footer__logo-image logo-footer" src="/img/footer-logo-mobile.png" width="128" height="24" alt="Логотип «Кэт энерджи»">
+              <img class="page-footer__logo-image logo-footer" src="img/footer-logo.png" width="128" height="24" alt="Логотип «Кэт энерджи»">
             </a>
             <ul class="page-footer__social social-list">
               <li class="social-list__social-item">
@@ -176,7 +178,7 @@
 
             <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
               HTML Academy
-              <img class="page-footer__logo-academy" src="/img/logo-html-mobile.svg" width="27" height="34" alt="Логодип «Html Academy»">
+              <img class="page-footer__logo-academy" src="img/html-logo.png" width="27" height="34" alt="Логодип «Html Academy»">
             </a>
           </div>
         </div>
