--- a/source/index.html
+++ b/source/index.html
@@ -11,12 +11,12 @@
     <!-- <div class="container-header"> -->
 
       <header class="page-body__header page-header">
-        <div class="page_header__wrapper">
-          <a class="page-header__logo">
-            <img class="page-header__logo-image logo-header" src="img/logo-tablet.png" width="190" height="39" alt="Логотип «Кэт энерджи»">
-          </a>
-          <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-        </div>
+          <div class="page__header-wrapper">
+            <a class="page-header__logo">
+              <img class="page-header__logo-image logo-header" src="img/logo-tablet.png" width="190" height="39" alt="Логотип «Кэт энерджи»">
+            </a>
+            <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+          </div>
         <nav class="page-header__main-nav main-nav">
           <ul class="main-nav__list site-menu">
             <li class="site-menu__item site-menu__item--active">
@@ -38,7 +38,7 @@
       <h1 class="visually-hidden">Питание для котов</h1>
 
       <section class="page-main__program program">
-        <div class="program__wrapper container">
+        <div class="program__wrapper">
           <h2 class="program__wrapper-title">Функциональное питание для котов</h2>
           <p class="program__text">Занялся собой? Займись котом!</p>
           <img class="program__image" src="img/index-can-desktop.png" width="280" height="270" alt="Изображение товара">
@@ -70,16 +70,23 @@
           <h2 class="advantages__title title">Как это работает</h2>
           <ul class="advantages__list">
             <li class="advantages__item advantages__item--one">
-              Функциональное питание содержит только полезные питательные вещества.
+              <p class="advantages__item-text">
+                Функциональное питание содержит только полезные питательные вещества.
+              </p>
             </li>
             <li class="advantages__item advantages__item--two">
-              Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+              <p class="advantages__item-text">
+                Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+              </p>
             </li>
             <li class="advantages__item advantages__item--three">
-              Замените один-два приема обычной еды на наше функциональное питание.
+              <p class="advantages__item-text">
+                Замените один-два приема обычной еды на наше функциональное питание.
+              </p>
             </li>
             <li class="advantages__item advantages__item--four">
-              Уже через месяц наслаждайтесь изменениями к лучшему <span class="advantages__item-text">вашего питомца!<span>
+              <p class="advantages__item-text">
+                Уже через месяц наслаждайтесь изменениями к лучшему <span class="advantages__item-text">вашего питомца!</span></p>
             </li>
           </ul>
         </div>
@@ -116,7 +123,7 @@
             <div class="example__toggle toggle-controls">
               <button class="toggle-controls__it-was-after" type="button">Было</button>
               <div class="toggle-controls__scale">
-                <div class="toggle-controls__bar"></div>
+                <button class="toggle-controls__bar" aria-label="Ползунок прокуртки в лево и право для фотографий примера"></button>
               </div>
               <button class="toggle-controls__it-was-after" type="button">Стало</button>
             </div>
@@ -143,7 +150,7 @@
       <img class="page-footer__map" src="img/mobile-map.png" width="320" height="362" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
 
         <div class="page-footer__container">
-          <div class="page__footer-wrapper container--flex">
+          <div class="page-footer__wrapper page-footer__wrapper--flex">
             <a class="page-footer__logo">
               <img class="page-footer__logo-image logo-footer" src="img/footer-logo.png" width="128" height="24" alt="Логотип «Кэт энерджи»">
             </a>
