--- a/source/form.html
+++ b/source/form.html
@@ -11,7 +11,7 @@
     <!-- <div class="container-header"> -->
     <header class="page-body__header page-header page-header--form">
       <div class="page__header-wrapper">
-        <a class="page-header__logo">
+        <a class="page-header__logo" href="index.html">
             <img class="page-header__logo-image logo-header" src="img/logo-tablet.png" width="190" height="39" alt="Логотип «Кэт энерджи»">
         </a>
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -170,7 +170,7 @@
       <img class="page-footer__map" src="img/mobile-map.png" width="320" height="362" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
 
       <div class="page-footer__wrapper">
-        <a class="page-footer__logo">
+        <a class="page-footer__logo" href="index.html">
           <img class="page-footer__logo-image logo-footer" src="img/footer-logo.png" width="128" height="24" alt="Логотип «Кэт энерджи»">
           </a>
           <ul class="page-footer__social social-list">
