--- a/source/catalog.html
+++ b/source/catalog.html
@@ -43,7 +43,7 @@
 
           <article class="product__item card">
             <div class="card__wrapper">
-              <a class="card__link" href="#">
+              <a class="card__link card__link--min" href="#">
                 <img class="card__image card__image--min" src="img/catalog-1-mobile.png" width="68" height="86" alt="Фотография контейнера корма со вкусом курицы 500 грамм">
               </a>
               <div class="product-wrapper">
@@ -63,7 +63,7 @@
 
           <article class="product__item card">
             <div class="card__wrapper">
-              <a class="card__link" href="#">
+              <a class="card__link card__link--max" href="#">
                 <img class="card__image card__image--max" src="img/catalog-2-mobile.png" width="84" height="100" alt="Фотография контейнера корма со вкусом курицы 100 грамм">
               </a>
               <div class="product-wrapper">
@@ -83,7 +83,7 @@
 
           <article class="product__item card">
             <div class="card__wrapper">
-              <a class="card__link" href="#">
+              <a class="card__link card__link--min" href="#">
                 <img class="card__image card__image--min" src="img/catalog-3-mobile.png" width="68" height="78" alt="Фотография контейнера корма со вкусом рыбы 500 грамм">
               </a>
               <div class="product-wrapper">
@@ -103,7 +103,7 @@
 
           <article class="product__item card">
             <div class="card__wrapper">
-              <a class="card__link" href="#">
+              <a class="card__link card__link--max" href="#">
                 <img class="card__image card__image--max" src="img/catalog-4-mobile.png" width="84" height="100" alt="Фотография контейнера корма со вкусом рыбы 1000 грамм">
               </a>
               <div class="product-wrapper">
@@ -123,7 +123,7 @@
 
           <article class="product__item card">
             <div class="card__wrapper">
-              <a class="card__link" href="#">
+              <a class="card__link card__link--min" href="#">
                 <img class="card__image card__image--min" src="img/catalog-5-mobile.png" width="68" height="78" alt="Фотография контейнера корма со вкусом гречки 500 грамм">
               </a>
               <div class="product-wrapper">
@@ -143,7 +143,7 @@
 
           <article class="product__item card">
             <div class="card__wrapper">
-              <a class="card__link" href="#">
+              <a class="card__link card__link--max" href="#">
                 <img class="card__image card__image--max" src="img/catalog-6-mobile.png" width="84" height="100" alt="Фотография контейнера корма со вкусом гречки 1000 грамм">
               </a>
               <div class="product-wrapper">
@@ -163,7 +163,7 @@
 
           <article class="product__item card">
             <div class="card__wrapper">
-              <a class="card__link" href="#">
+              <a class="card__link card__link--min" href="#">
                 <img class="card__image card__image--min" src="img/catalog-7-mobile.png" width="72" height="84" alt="Фотография контейнера корма со вкусом риса 500 грамм">
               </a>
               <div class="product-wrapper">
