--- a/source/index.html
+++ b/source/index.html
@@ -11,7 +11,7 @@
 
 
       <header class="page-body__header page-header">
-          <div class="page__header-wrapper">
+          <div class="page-header__wrapper">
             <a class="page-header__logo">
               <picture>
                 <source media="(min-width: 1440px)" srcset="img/header-logo-desktop.svg">
@@ -19,9 +19,9 @@
                 <img class="page-header__logo-image logo-header" src="img/header-logo-mobile.svg" width="190" height="39" alt="Логотип «Кэт энерджи»">
               </picture>
             </a>
-            <button class="page-header__toggle page-header__toggle--closed" type="button"><span class="visually-hidden">Открыть меню</span></button>
+            <button class="page-header__toggle page-header__toggle--closed page-header__toggle--nojs" type="button"><span class="visually-hidden">Открыть меню</span></button>
           </div>
-        <nav class="page-header__main-nav main-nav main-nav--closed">
+        <nav class="page-header__main-nav main-nav main-nav--closed main-nav--nojs">
           <ul class="main-nav__list site-menu">
             <li class="site-menu__item">
               <a class="site-menu__link site-menu__link--active">Главная</a>
@@ -121,12 +121,12 @@
               <picture>
                 <source media="(min-width: 1440px)" srcset="img/before-tablet.png 1x, img/before-tablet@2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/before-tablet.png 1x, img/before-tablet@2x.png 2x">
-                <img class="example__image-it-was" src="img/before-mobile.png" srcset="img/before-mobile@2x.png" width="311" height="232" alt="до нашего питания">
+                <img class="example__image example__image-it-was" src="img/before-mobile.png" srcset="img/before-mobile@2x.png" width="311" height="232" alt="до нашего питания">
               </picture>
               <picture>
                 <source media="(min-width: 1440px)" srcset="img/cat-skinny.png 1x, img/cat-skinny@2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/cat-skinny.png 1x, img/cat-skinny@2x.png 2x">
-                <img class="example__image-after example__image--invisible" src="img/after-mobile.png" srcset="img/after-mobile@2x.png" width="251" height="240" alt="после нашего питания">
+                <img class="example__image example__image-after example__image--invisible" src="img/after-mobile.png" srcset="img/after-mobile@2x.png" width="251" height="240" alt="после нашего питания">
               </picture>
             </div>
 
@@ -157,8 +157,11 @@
           </p>
         </div>
       </div>
-      <iframe class="page-footer__iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2867.616345426434!2d30.323029477098242!3d59.93811393515008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2skz!4v1608139327153!5m2!1sru!2skz" width="100%" height="362" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-      <img class="page-footer__map" src="img/map-mobile.png" width="320" height="362" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+      <div class="page-footer__map-wrapper">
+        <iframe class="page-footer__iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2867.616345426434!2d30.323029477098242!3d59.93811393515008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2skz!4v1608139327153!5m2!1sru!2skz">
+        </iframe>
+        <img class="page-footer__map" src="img/map-mobile.png" width="320" height="362" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+      </div>
       <div class="page-footer__wrapper">
         <a class="page-footer__logo">
           <img class="page-footer__logo-image logo-footer" src="img/footer-logo-mobile.svg" width="128" height="24" alt="Логотип «Кэт энерджи»">
