--- a/source/index.html
+++ b/source/index.html
@@ -146,7 +146,7 @@
             <div class="example__toggle toggle-controls">
               <button class="toggle-controls__it-was-after toggle-controls__it-was-after--before" type="button">Было</button>
               <div class="toggle-controls__scale">
-                <button class="toggle-controls__bar" aria-label="Ползунок прокуртки в лево и право для фотографий примера"></button>
+                <button class="toggle-controls__bar toggle-controls__bar--before" aria-label="Ползунок прокуртки в лево и право для фотографий примера"></button>
               </div>
               <button class="toggle-controls__it-was-after toggle-controls__it-was-after--after" type="button">Стало</button>
             </div>
@@ -225,5 +225,6 @@
 
     </footer>
     <script src="js/main-nav.js"></script>
+    <script src="js/example-image.js"></script>
   </body>
 </html>
