--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
   </head>
 
   <body class="page__body page-body page-body--image">
@@ -367,6 +367,7 @@
       </div>
 
     </footer>
+    <script src="js/script.min.js"></script>
     <script src="js/main-nav.js"></script>
   </body>
 </html>
