--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
   </head>
 
   <body class="page__body page-body">
@@ -45,6 +45,7 @@
         <div class="program__wrapper">
           <h2 class="program__wrapper-title">Функциональное питание для котов</h2>
           <p class="program__text">Занялся собой? Займись котом!</p>
+
           <picture>
             <source type="image/webp" media="(min-width: 1440px)" srcset="img/index-can-desktop.webp 1x, img/index-can-desktop@2x.webp 2x">
             <source type="image/webp" media="(min-width: 768px)" srcset="img/index-can-tablet.webp 1x, img/index-can-tablet@2x.webp 2x">
@@ -54,6 +55,7 @@
             <source media="(min-width: 768px)" srcset="img/index-can-tablet.png 1x, img/index-can-tablet@2x.png 2x">
             <img class="program__image" src="img/index-can-mobile.png" srcset="img/index-can-mobile@2x.png" width="280" height="270" alt="Изображение товара">
           </picture>
+
           <a class="program__link button" href="#">Подобрать программу</a>
         </div>
       </section>
@@ -224,6 +226,7 @@
       </div>
 
     </footer>
+    <script src="js/script.min.js"></script>
     <script src="js/main-nav.js"></script>
     <script src="js/example-image.js"></script>
   </body>
