--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
+    <link href="css/style.css" rel="stylesheet">
     <link href="css/style.min.css" rel="stylesheet">
   </head>
 
@@ -99,7 +100,7 @@
         </div>
       </section>
 
-      <section class="page-main__example example">
+      <section class="page-main__example example example--after">
         <div class="example__wrapper">
           <div class="example__container">
             <h2 class="example__title title">Живой пример</h2>
