--- a/source/catalog.html
+++ b/source/catalog.html
@@ -70,7 +70,7 @@
                   <dd class="card__description">700 Р.</dd>
                 </dl>
               </div>
-              <a class="card__link--button button" href="#">Заказать</a>
+              <a class="card__link-button button" href="#">Заказать</a>
             </div>
           </article>
 
@@ -97,7 +97,7 @@
                   <dd class="card__description">1000 Р.</dd>
                 </dl>
               </div>
-                <a class="card__link--button button" href="#">Заказать</a>
+                <a class="card__link-button button" href="#">Заказать</a>
             </div>
           </article>
 
@@ -124,7 +124,7 @@
                   <dd class="card__description">700 Р.</dd>
                 </dl>
               </div>
-              <a class="card__link--button button" href="#">Заказать</a>
+              <a class="card__link-button button" href="#">Заказать</a>
             </div>
           </article>
 
@@ -151,7 +151,7 @@
                   <dd class="card__description">1000 Р.</dd>
                 </dl>
               </div>
-              <a class="card__link--button button" href="#">Заказать</a>
+              <a class="card__link-button button" href="#">Заказать</a>
             </div>
           </article>
 
@@ -178,7 +178,7 @@
                   <dd class="card__description">400 Р.</dd>
                 </dl>
               </div>
-              <a class="card__link--button button" href="#">Заказать</a>
+              <a class="card__link-button button" href="#">Заказать</a>
             </div>
           </article>
 
@@ -205,7 +205,7 @@
                   <dd class="card__description">700 Р.</dd>
                 </dl>
               </div>
-              <a class="card__link--button button" href="#">Заказать</a>
+              <a class="card__link-button button" href="#">Заказать</a>
             </div>
           </article>
 
@@ -232,7 +232,7 @@
                   <dd class="card__description">500 Р.</dd>
                 </dl>
               </div>
-              <a class="card__link--button button" href="#">Заказать</a>
+              <a class="card__link-button button" href="#">Заказать</a>
             </div>
           </article>
 
@@ -301,7 +301,7 @@
     </main>
     <footer class="page-body__footer page-footer">
 
-      <div class="page-footer__address address">
+      <div class="page-footer__address address address--catalog">
         <div class="address__wrapper">
           <p class="address__slogan">
             приглашаем <br><span class="address__span">к сотрудничеству дилеров!</span>
