--- a/source/form.html
+++ b/source/form.html
@@ -146,7 +146,7 @@
     </main>
     <footer class="page-body__footer page-footer">
 
-      <div class="page-footer__address address">
+      <div class="page-footer__address address address--catalog">
         <div class="address__wrapper">
           <p class="address__slogan">
             приглашаем <br><span class="address__span">к сотрудничеству дилеров!</span>
