--- a/source/index.html
+++ b/source/index.html
@@ -6,6 +6,8 @@
     <title>HTML Academy: Кэт энерджи</title>
     <link href="css/style.css" rel="stylesheet">
     <link href="css/style.min.css" rel="stylesheet">
+    <link rel="preload" href="fonts/oswaldregular.woff2">
+    <link rel="preload" href="fonts/oswaldregular.woff">
   </head>
 
   <body class="page__body page-body">
