--- a/source/index.html
+++ b/source/index.html
@@ -4,10 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
-    <link href="css/style.css" rel="stylesheet">
     <link href="css/style.min.css" rel="stylesheet">
-    <link rel="preload" href="fonts/oswaldregular.woff2">
-    <link rel="preload" href="fonts/oswaldregular.woff">
+    <link rel="preload" href="fonts/oswaldregular.woff2" as="font">
   </head>
 
   <body class="page__body page-body">
@@ -230,7 +228,5 @@
 
     </footer>
     <script src="js/script.min.js"></script>
-    <script src="js/main-nav.js"></script>
-    <script src="js/example-image.js"></script>
   </body>
 </html>
