--- a/source/catalog.html
+++ b/source/catalog.html
@@ -2,9 +2,10 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Кэт энерджи</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
+    <title>HTML Academy: Кэт энерджи</title>
+    <link href="css/style.min.css" rel="stylesheet">
+    <link rel="preload" href="fonts/oswaldregular.woff2" as="font">
   </head>
 
   <body class="page__body page-body page-body--image">
@@ -368,6 +369,5 @@
 
     </footer>
     <script src="js/script.min.js"></script>
-    <script src="js/main-nav.js"></script>
   </body>
 </html>
