--- a/source/index.html
+++ b/source/index.html
@@ -57,7 +57,7 @@
             <img class="program__image" src="img/index-can-mobile.png" srcset="img/index-can-mobile@2x.png" width="280" height="270" alt="Изображение товара">
           </picture>
 
-          <a class="program__link button" href="#">Подобрать программу</a>
+          <a class="program__link button" href="form.html">Подобрать программу</a>
         </div>
       </section>
 
